fix: star trail canvas mobile sizing, default gap to 1s, adjust padding

--- a/src/app/star-trail-calculator/_components/StarTrailCalculator.module.css
+++ b/src/app/star-trail-calculator/_components/StarTrailCalculator.module.css
@@ -194,7 +194,7 @@
   }
 
   .canvasMain {
-    padding: 4px;
+    padding: 10px;
     flex: none;
     min-height: 300px;
   }
